[package]
name = "tracing-gelf"
version = "0.5.2"
authors = ["Harry Barber <harrybarber@protonmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/hlb8122/tracing-gelf"
repository = "https://github.com/hlb8122/tracing-gelf"
keywords = ["graylog", "logging", "tracing", "tcp", "udp"]
description = """
A Graylog tracing library.
"""
categories = ["development-tools"]
exclude = ["/.travis.yml"]

[badges]
travis-ci = { repository = "hlb8122/tracing-gelf" }

[features]
rustls-tls = ["tokio-rustls"]

[dependencies]
bytes = "1"
hostname = "0.3"
serde_json = "1"
futures-channel = "0.3"
futures-util = { version = "0.3", features = ["sink"] }
thiserror = "1"
tokio = { version = "1", features = ["io-util", "net", "time"] }
tokio-rustls = { version = "0.23", optional = true }
tokio-util = { version = "0.6", features = ["codec", "net"] }
tracing-core = "0.1"
tracing-futures = "0.2"
tracing-subscriber = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
tracing = "0.1"
