[package]
name = "tracing-gelf"
version = "0.8.0"
authors = ["Harry Barber <harrybarber@protonmail.com>"]
edition = "2021"
license = "MIT"
homepage = "https://github.com/hlb8122/tracing-gelf"
repository = "https://github.com/hlb8122/tracing-gelf"
keywords = ["graylog", "logging", "tracing", "tcp", "udp"]
description = """
A Graylog tracing library.
"""
categories = ["development-tools"]
exclude = ["/.travis.yml"]

[badges]
travis-ci = { repository = "hlb8122/tracing-gelf" }

[features]
rustls-tls = ["tokio-rustls", "rustls-pki-types"]

[dependencies]
bytes = "1.5.0"
futures-channel = "0.3.30"
futures-util = { version = "0.3.30", features = ["sink"] }
hostname = "0.3.1"
rustls-pki-types = { version = "1.1.0", optional = true }
serde_json = "1.0.108"
thiserror = "1.0.52"
tokio = { version = "1.35.1", features = ["io-util", "net", "time"] }
tokio-rustls = { version = "0.25.0", optional = true }
tokio-util = { version = "0.7.10", features = ["codec", "net"] }
tracing-core = "0.1.32"
tracing-futures = "0.2.5"
tracing-subscriber = "0.3.18"

[dev-dependencies]
tokio = { version = "1.35.1", features = ["macros", "rt", "rt-multi-thread"] }
tracing = "0.1.40"
